get overflow division stops to scroll

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,8 +3,8 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-
+  background-color: darkgray;
+  height: 100vh;
   font-weight: normal;
 }
 
@@ -30,6 +30,5 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
